--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.48.1",
     "apexcharts": "^3.45.2",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.7",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "next": "14.1.0",
